# projeto-tau

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  go.work
agent-service/: Dockerfile  README.md  pyproject.toml
agent-service/app/: __init__.py  main.py
agent-service/app/api/: routes.py
agent-service/app/core/: config.py
agent-service/app/graph/: state.py  workflow.py
agent-service/app/models/: schemas.py
agent-service/app/observability/: langfuse_client.py  logging.py  metrics.py
agent-service/app/rag/: embeddings.py  ingest.py  store.py
agent-service/app/security/: guards.py
agent-service/app/services/: model_gateway.py  token_cost.py
agent-service/app/tools/: toolkit.py
agent-service/tests/: test_agent_service.py
bfa-go/: Dockerfile  go.mod  go.sum
bfa-go/cmd/server/: main.go
bfa-go/internal/api/: router.go
bfa-go/internal/cache/: ttl_cache.go
bfa-go/internal/clients/: agent.go  profile.go  transactions.go
bfa-go/internal/config/: config.go
bfa-go/internal/errors/: errors.go
bfa-go/tests/: assistant_integration_test.go
docs/: architecture.md
infra/prometheus/: prometheus.yml
knowledge-base/documents/: credito-politicas-pj.md  elegibilidade-produtos-pj.md  faq-fluxo-caixa.md  faq-kyc-documentacao.md  recomendacoes-saude-financeira-pj.md  risco-operacional-interno.md
mock-services/: Dockerfile  go.mod
scripts/: bootstrap.sh  evaluate_agent.py  run_agent.sh  run_bfa.sh  run_mock_services.sh
tests/contract/: agent_response.schema.json
tests/evaluation/: agent_eval_cases.json
(+23 files in other folders)
